src/rules/snapshots/pg_migration_lint__rules__pgm021__tests__add_unique_no_existing_index_fires.snap
---
source: src/rules/pgm021.rs
assertion_line: 121
expression: findings
---
- rule_id: PGM021
  severity: Critical
  message: "ADD UNIQUE on existing table 'orders' without a pre-existing unique index on column(s) [email]. Create a unique index CONCURRENTLY first, then use ADD CONSTRAINT ... UNIQUE USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
