src/rules/snapshots/pg_migration_lint__rules__pgm021__tests__add_unique_using_index_non_unique_index_fires.snap
---
source: src/rules/pgm021.rs
expression: findings
---
- rule_id: PGM021
  severity: Critical
  message: "ADD UNIQUE USING INDEX 'idx_orders_email' on table 'orders': referenced index is not UNIQUE."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
