src/rules/snapshots/pg_migration_lint__rules__pgm021__tests__vacuum_full_existing_table_fires.snap
---
source: src/rules/pgm021.rs
expression: findings
---
- rule_id: PGM021
  severity: Critical
  message: "VACUUM FULL on table 'orders' rewrites the entire table under ACCESS EXCLUSIVE lock, blocking all reads and writes. Use pg_repack or pg_squeeze for online compaction."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
